
<resources>
    <string name="app_name">Translate</string>
    <string name="learn_words_picture">learn words picture</string>
    <string name="learn_new_words_daily">Learn new words daily</string>
    <string name="quiz_picture">quiz picture</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="progress_picture">progress picture</string>
    <string name="check_progress">Progress</string>
    <string name="splash_screen_image">splash screen image</string>
    <string name="see_progress">Check Overall Progress</string>
    <string name="goto_home">Go to Home</string>
    <string name="result">Result</string>
    <string name="question_and_answers">Question and Answers</string>
    <string name="submit">Submit</string>
    <string name="quiz_completed">Quiz Completed</string>
    <string name="tick_mark_animation">tick mark animation</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="your_score">Your Score</string>
    <string name="result_image">result image</string>
    <string name="score">score</string>
    <string name="most_recent_quiz_score">Latest score</string>
    <string name="total_quizzes_taken">Number of quizzes</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered? Sign In!</string>

    <!--FRENCH STYLE-->
    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Phrases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family Members</string>


    <!--SPANISH STYLE-->
    <string name="word_activity_title">Guess</string>

    <string name="purpose_key">purposeKey</string>
    <string name="spanish_word_key">spanishWordKey</string>
    <string name="english_word_key">englishWordKey</string>
    <string name="correct_word_key">correctWordKey</string>
    <string name="position_key">positionWordKey</string>
    <string name="update_key">updateKey</string>

</resources>

