<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".classes.FrenchActivity"
    android:background="@color/lightWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categories"
            android:textSize="30sp"
            android:fontFamily="@font/brandon_grotesque_black"
            android:textAllCaps="true"
            android:padding="10dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_car_background">

                <TextView
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="152dp"
                    android:fontFamily="@font/baloo"
                    android:padding="25dp"
                    android:text="@string/category_family"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="231dp"
                    android:layout_height="150dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="-40dp"
                    android:layout_marginEnd="-40dp"
                    android:layout_marginRight="-11dp"
                    android:src="@drawable/family_icon" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/colors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_restaurant_background">

                <TextView
                    android:layout_width="164dp"
                    android:layout_height="121dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="21dp"
                    android:fontFamily="@font/baloo"
                    android:padding="25dp"
                    android:text="@string/category_colors"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="209dp"
                    android:layout_height="181dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="-38dp"
                    android:layout_marginTop="-40dp"
                    android:layout_marginEnd="180dp"
                    android:layout_marginRight="180dp"
                    android:layout_marginBottom="9dp"
                    android:src="@drawable/colors_icon" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_hospitals_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="167dp"
                    android:fontFamily="@font/baloo"
                    android:padding="25dp"
                    android:text="@string/category_numbers"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="204dp"
                    android:layout_height="130dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="-40dp"
                    android:layout_marginRight="-17dp"
                    android:src="@drawable/numbers_icon" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/phrases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_shops_background">

                <TextView
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="152dp"
                    android:fontFamily="@font/baloo"
                    android:padding="25dp"
                    android:text="@string/category_phrases"
                    android:textColor="@color/primary_dark_color"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="231dp"
                    android:layout_height="143dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="-40dp"
                    android:layout_marginEnd="-40dp"
                    android:layout_marginRight="131dp"
                    android:src="@drawable/phrases_icon" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>
